--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,10 @@
+input.demo {
+    border: 2px solid black;
+    width: 300px;
+    height: 30px;
+    font-size: 25px;
+}
+
 :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
